Close #61: Fix Docs X-Axis Overflow for long code blocks

--- a/themes/navy/source/scss/main.scss
+++ b/themes/navy/source/scss/main.scss
@@ -19,6 +19,7 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   background-color: $colorNimbus;
+  overflow-x: hidden;
 }
 
 .home-wrap {
